--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body style="margin: 0;">
     <a-scene embedded arjs>
-      <a-marker preset="custom" type="pattern" url="criminalstanceqr1.patt">
-        <a-entity position="0 0.05 0" scale="4 4 4" gltf-model="criminalstance.glb"></a-entity>
+      <a-marker preset="custom" type="pattern" url="playrug1.patt">
+        <a-entity position="0 0 0" scale="4 4 4" gltf-model="apartmentrondastest1.glb"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
