--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body style="margin: 0;">
     <a-scene embedded arjs>
-      <a-marker preset="custom" type="pattern" url="playrug1.patt">
+      <a-marker preset="custom" type="pattern" url="playrugqr1.patt">
         <a-entity position="0 0 0" scale="4 4 4" gltf-model="apartmentrondastest1.glb"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
