--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body style="margin: 0;">
     <a-scene embedded arjs>
       <a-marker preset="custom" type="pattern" url="playrugqr1.patt">
-        <a-entity position="0 0 0" scale="4 4 4" gltf-model="apartmentrondastest1.glb"></a-entity>
+        <a-entity position="0 0 0" scale="4 4 4" gltf-model="apartmentbyrondas.glb"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
